<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_main"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".ui.activity.MainActivity">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar1"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_main"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/colorPrimary"
                app:popupTheme="@style/Theme.AppCompat.Light" />

            <android.support.design.widget.TabLayout
                android:id="@+id/tabs1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/colorPrimary"
                app:tabTextColor="@color/white">
                <android.support.design.widget.TabItem
                    android:id="@+id/tabItem1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_text_1" />
                <android.support.design.widget.TabItem
                    android:id="@+id/tabItem21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_text_2" />
                <android.support.design.widget.TabItem
                    android:id="@+id/tabItem41"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_text_3" />
                <android.support.design.widget.TabItem
                    android:id="@+id/tabItem51"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_text_4" />
                <android.support.design.widget.TabItem
                    android:id="@+id/tabItem61"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_text_5" />
                <android.support.design.widget.TabItem
                    android:id="@+id/tabItem71"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_text_6" />
                <android.support.design.widget.TabItem
                    android:id="@+id/tabItem31"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_text_7" />

            </android.support.design.widget.TabLayout>

        </android.support.design.widget.AppBarLayout>

            <android.support.v4.view.ViewPager
                android:id="@+id/vp_Container"
                android:layout_marginTop="80dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </android.support.v4.view.ViewPager>

    </android.support.design.widget.CoordinatorLayout>
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_layout"

        app:menu="@menu/nav_menu">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="哈语"/>
            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"/>
        </LinearLayout>


    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>