<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/read_dl_slide"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.BookReadActivity">

        <!--页面滑动插件-->
        <cn.xfangfang.paperviewlibrary.PaperView
            android:id="@+id/read_pv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:background="@mipmap/theme_leather_bg"
            app:textLine="15"
            app:textSize="16sp">
        </cn.xfangfang.paperviewlibrary.PaperView>

        <ProgressBar
            android:id="@+id/read_progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/read_ll_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="#fff"
            android:clickable="true"
            android:orientation="vertical"
            android:visibility="gone">

            <!--字体设置栏-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="减小"
                    android:onClick="decTextSize"
                    android:gravity="center"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="增大"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:onClick="incTextSize"/>

            </LinearLayout>
            <!--页面进度栏-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/read_tv_pre_chapter"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:onClick="lastChapter"
                    android:text="@string/last_chapter" />

                <SeekBar
                    android:id="@+id/read_sb_chapter_progress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/read_tv_next_chapter"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:onClick="nextChapter"
                    android:text="@string/next_chapter" />
            </LinearLayout>



            <!--菜单栏-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/read_tv_category"
                    style="@style/readButton"
                    android:drawableTop="@mipmap/read_menu_category"
                    android:text="@string/category" />

                <TextView
                    android:id="@+id/read_tv_night_mode"
                    style="@style/readButton"
                    android:drawableTop="@mipmap/read_menu_night"
                    android:text="@string/dark_mode" />

                <TextView
                    android:id="@+id/read_tv_add2book"
                    style="@style/readButton"
                    android:drawableTop="@mipmap/read_menu_font"
                    android:text="@string/add2Book" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <!--侧滑栏目录-->
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#fff"
        android:clickable="true"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="15dp"
            android:text="@string/category"
            android:textColor="#000"
            android:textSize="20sp"/>


            <android.support.v7.widget.RecyclerView
                android:id="@+id/read_category"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical"
                android:clickable="true">

            </android.support.v7.widget.RecyclerView>
    </LinearLayout>
</android.support.v4.widget.DrawerLayout>
